--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ravikumar Makwana</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://in.linkedin.com/in/ravikumar-makwana" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.instagram.com/ravikumarmakwana" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.facebook.com/ravikumar.makwana.1690" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://in.linkedin.com/in/ravikumar-makwana" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/ravikumarmakwana" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/ravikumar.makwana.1690" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="tel:6354508988" class="twitter"><i class="bi bi-phone"></i></a>
           <a href="mailto:ravikumar.makwana.18@gmail.com" class="google-plus"><i class="bi bi-envelope"></i></a>
         </div>
@@ -54,8 +54,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Work & Experience</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Resume</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Work & Experience</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-code"></i> <span>Projects</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -67,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ravikumar Makwana</h1>
-      <p>I'm <span class="typed" data-typed-items="Computer Engineer, Dot Net Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Computer Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -76,168 +75,42 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
         <div class="section-title">
           <h2>About</h2>
-          <p>I am Computer Engineer. I have completed 5+ projects during college time. Currently, I am doing an internship on Dot Net Technology.</p>
+          <p>I'm Computer Engineer. A quick learner and self-motivated individual, having more than 1.4 years of professional experience as a Full Stack Web Developer. Skilled in C#, Dot.NET Core Web API, and Angular technologies.</p>
         </div>
-
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Computer Engineer</h3>
-            <br/>
             <div class="row">
               <div class="col-lg-12">
                 <ul class="py-4">
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> April 18, 2000</li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong><a href="tel:6354508988"> 63545 08988</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong><a href="mailto:ravikumar.makwana.18@gmail.com"> ravikumar.makwana.18@gmail.com </a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> Maruti Nagar Street no. 5, Kothariya Main Road, Rajkot - 360002</li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> Above Balaji cold drinks, Front of khodiyar hotel, Near hudco police station. Khothriya main road</li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> Rajkot</li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>State:</strong> Gujarat</li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> India</li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Pin Code:</strong> 360 002</li>
                 </ul>
               </div>
             </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Work & Experience</h2>
-        </div>
-
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Number of Projects</strong></p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-code"></i>
-              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Programming Languages</strong></p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Online Courses</strong></p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Work with Frameworks</strong></p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <h6><span class="skill">Algorithm Solving <i class="val">90%</i></span></h6>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <h6><span class="skill">Data Structure <i class="val">80%</i></span></h6>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <h6><span class="skill">Programming Languages <i class="val">95%</i></span></h6>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="progress">
-              <h6><span class="skill">Web Development <i class="val">85%</i></span></h6>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <h6><span class="skill">Object Oriented Programming <i class="val">90%</i></span></h6>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <h6><span class="skill">DataBase Management System <i class="val">80%</i></span><h6>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
-
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
-
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Work & Experience</h2>
           <p>To become a successful expert in the field of Computer Engineering by channelizing my technical knowledge and skills to ensure personal and professional growth and to contribute to the prosperity of the organization.</p>
         </div>
-
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Ravikumar Makwana</h4>
-              <p><em>I am doing an internship on Dot Net Technology.</em></p>
-              <ul>
-                <li>Rajkot</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Engineering - Computer Engineering</h4>
@@ -270,9 +143,6 @@
                 <b>Percentile</b>&nbsp;:&nbsp;98 %
               </p>
             </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-           <br/><br/><br/><br/>
             <div class="resume-item">
               <h4>Academic Achievements</h4>
               <p>
@@ -296,28 +166,88 @@
                 </ul>
               </p>
             </div>
-            <br/>
+            <br><br>
             <div class="resume-item">
               <h4>Strengths</h4>
               <p>
                 <ul>
-                  <li>Quick Learner</li>
+                  <li>Creativity</li>
+                  <li>Focused</li>
                   <li>Taking Initiative</li>
+                  <li>Multitasking</li>
+                </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Weaknesses</h4>
+              <p>
+                <ul>
+                  <li>Insecure</li>
+                </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Hobbies</h4>
+              <p>
+                <ul>
+                  <li>I love learning new technologies</li>
+                  <li>Problem-solving, Competitive programming</li>
+                  <li>Analyzing, and Designing new applications</li>
+                  <li>Music listening</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Junior Software Engineer</h4>
+              <h5>Aug 2021 - Present</h5>
+              <p><em>Tark Technologies LLP, Rajkot</em></p>
+              <p>
+                <ul>
+                  <li style="text-align: justify;">Wrote front-end and back-end APIs for building and managing functionality in medical-based projects. Additionally wrote validations and automated unit testing. ASP.NET Core Web API, Angular, MS SQL.</li>
+                  <li style="text-align: justify;">Designed and implemented database migration from SQL to MySQL using skeema.io and flywaydb.</li>  
+                  <li style="text-align: justify;">Performed R&D on Angular, .NET core, and other libraries versions and upgraded to the latest version on service-based projects.</li>
+                  <li style="text-align: justify;">Wrote and deployed Lambda and State functions on AWS for client’s requirements. DynamoDB, S3.</li>
+                  <li style="text-align: justify;">I also designed and implemented a bank-related project from scratch. Onion Architecture</li>
+                </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Software Intern</h4>
+              <h5>Feb 2021 - Aug 2021</h5>
+              <p><em>Tark Technologies LLP, Rajkot</em></p>
+              <p>
+                <ul>
+                  <li style="text-align: justify;">I learned and practiced new technologies like C#, ADO.NET, MySQL, SQL, Entity Framework, Authentication and Authorization, ASP.NET Core Web API, and Unit testing.</li>
+                  <li style="text-align: justify;">Designed and explored different architectures like Layered architecture and Onion architecture repository patterns.</li>  
+                  <li style="text-align: justify;">Designed and Implemented an Infrastructure Management system from scratch using the above technologies.</li>
+                  <li style="text-align: justify;">Implemented Automated Unit testing, logging, and Validation in ASP.NET Core Web API.</li>
                 </ul>
               </p>
             </div>
             <br/>
             <div class="resume-item">
-              <h4>Weaknesses</h4>
+              <h4>TECHNICAL STRENGTHS</h4>
               <p>
                 <ul>
-                  <li>Concentrate on one thing at a time</li>
+                  <li>C# </li>
+                  <li>OOP and POP</li>
+                  <li>ASP.Net Core MVC, ASP.Net Core Web API</li>
+                  <li>Entity Framework Core, ADO.NET, Dapper</li>
+                  <li>X-Unit, N-Unit and MS Unit testing</li>
+                  <li>LINQ</li>
+                  <li>HTML, CSS</li> 
+                  <li>JavaScript, TypeScript, Angular</li>
+                  <li>SQL, MySQL</li>
+                  <li>Lambda Function, State Function</li>
+                  <li>Layered, and Onion Architecture</li>
                 </ul>
               </p>
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- End Resume Section -->
 
@@ -330,7 +260,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-code"></i></div>
-            <h4 class="title"><a href="">My City - Smart City Android Application</a></h4>
+            <h4 class="title"><a>My City - Smart City Android Application</a></h4>
             <p class="description" align="justify">This Smart City Application, Which cover the Every thing about city.It is android based application to provide information about entire City.</p>
           </div>
           <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
@@ -372,68 +302,37 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-6 d-flex align-items-stretch">
+          <div class="col-lg-12 d-flex align-items-stretch">
             <div class="info">
-              <div class="address">
-                <i class="bi bi-map-fill"></i>
-                <h4>Location:</h4>
-                <p>Maruti Nagar Street no. 5, Kothariya Main Road, Rajkot - 360002</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope-fill"></i>
-                <h4>Email:</h4>
-                <a href="mailto:ravikumar.makwana.18@gmail.com">
-                  <p>ravikumar.makwana.18@gmail.com</p>
-                </a>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone-fill"></i>
-                <h4>Call:</h4>
-                <a href="tel:6354508988">
-                  <p>63545 08988</p>
-                </a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="fab fa-hackerrank"></i>
-                <h4>Hackerrank:</h4>
-                <a href="https://hackerrank.com/Ravi_makwana">
-                  <p>Ravi_makwana</p>
-                </a>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-github"></i>
-                <h4>GitHub:</h4>
-                <a href="https://github.com/ravikumarmakwana">
-                  <p>ravikumarmakwana</p>
-                </a>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-youtube"></i>
-                <h4>YouTube</h4>
-                <a href="https://www.youtube.com/channel/UC79DD9ElbGrSKm4DB-oeXDA?reload=9&view_as=subscriber">
-                  <p>Ravikumar Makwana</p>
-                </a>
-              </div>
+              <i class="bi bi-envelope-fill"></i>
+              <h4>Email:</h4>
+              <a href="mailto:ravikumar.makwana.18@gmail.com">
+                <p>ravikumar.makwana.18@gmail.com</p>
+              </a>
+              <i class="bi bi-phone-fill"></i>
+              <h4>Phone Number:</h4>
+              <a href="tel:6354508988">
+                <p>63545 08988</p>
+              </a>
+              <i class="bi bi-github"></i>
+              <h4>GitHub:</h4>
+              <a href="https://github.com/ravikumarmakwana" target="_blank">
+                <p>https://github.com/ravikumarmakwana</p>
+              </a>
+              <i class="fab fa-hackerrank"></i>
+              <h4>Hackerrank:</h4>
+              <a href="https://hackerrank.com/Ravi_makwana" target="_blank">
+                <p>https://hackerrank.com/Ravi_makwana</p>
+              </a>
+              <i class="bi bi-map-fill"></i>
+              <h4>Address:</h4>
+              <p>Above Balaji cold drinks, Front of khodiyar hotel, Near hudco police station. Khothriya main road, Rajkot-360002, Gujarat.</p>
             </div>
           </div>
-
         </div>
-
       </div>
     </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
-
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
