--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
                 </ul>
               </p>
             </div>
+            <div class="resume-item">
+              <h4>TCS Campus Ambassador</h4>
+              <h5>Jun 2020 - Sep 2020</h5>
+              <p>
+                <ul>
+                  <li style="text-align: justify;">Motivated and guided my class mates on how to participate in CodeVita coding competition, what are its benefits, and how to prepare for the competition to get a job letter from TCS.</li>
+                </ul>
+              </p>
+            </div>
             <br/>
             <div class="resume-item">
               <h4>TECHNICAL STRENGTHS</h4>
