--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
           <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-code"></i></div>
             <h4 class="title"><a>My City - Smart City Android Application</a></h4>
-            <p class="description" align="justify">This Smart City Application, Which cover the Every thing about city.It is android based application to provide information about entire City.</p>
+            <p class="description" align="justify">This Smart City Application, Which cover the Every thing about city. It is android based application to provide information about entire City.</p>
           </div>
           <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-calendar-event-fill"></i></div>
             <h4 class="title"><a href="https://startjourney.herokuapp.com" target="_blank">Start Journey - Smart Traveler Web Application</a></h4>
-            <p class="description" align="justify">This Smart Traveler web Application, Which cover the Every thing about tourist places in city.I add new things which not available in any of website is chatbot.</p>
+            <p class="description" align="justify">This Smart Traveler web Application, Which cover the Every thing about tourist places in city. Chatbot using Dialogflow</p>
           </div>
           <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book-half"></i></div>
