Update projects details

--- a/index.html
+++ b/index.html
@@ -268,6 +268,29 @@
 
         <div class="row">
           <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-bank2"></i></div>
+            <h4 class="title"><a>Tark Bank</a></h4>
+            <p class="description" align="justify">
+              Tark Bank is a distributed system, that simulates various banking operations like deposit, withdraw, interest calculation, mini statements, payment services, card management, and customer services.<br/>
+              <b>Technologies</b>: - C#, ASP.NET Core Web API, MySQL, xUnit Testing.<br/>
+              <b>Software Architecture</b>: - Onion Architecture.
+            </p>
+          </div>
+          <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-server"></i></div>
+            <h4 class="title"><a>Infrastructure Management</a></h4>
+            <p class="description" align="justify">
+              Created an Infrastructure management system to observe the application server status.<br/>
+              <b>Technologies</b>: - C#, ASP.NET Core Web API, MSSQL, Hangfire, MS Test, Angular.<br/>
+              <b>Software Architecture</b>: - Layered Architecture.
+            </p>
+          </div>
+          <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-house-fill"></i></div>
+            <h4 class="title"><a  href="https://salutemcare.herokuapp.com/" target="_blank">Salutem Care - Healthcare Solution</a></h4>
+            <p class="description" align="justify">Encouragement to live a healthy lifestyle, easier communication, appointment scheduling, counseling, and improved patient monitoring by storing historical data.</p>
+          </div>
+          <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-code"></i></div>
             <h4 class="title"><a>My City - Smart City Android Application</a></h4>
             <p class="description" align="justify">This Smart City Application, Which cover the Every thing about city. It is android based application to provide information about entire City.</p>
@@ -291,11 +314,6 @@
             <div class="icon"><i class="bi bi-book-fill"></i></div>
             <h4 class="title"><a  href="https://virtual-book.herokuapp.com" target="_blank">Virtual Book</a></h4>
             <p class="description" align="justify">Virtual Book is a Smart Academic Material Web Application that provides functions like online class-notes, lab-assignments, class-ppt, pdf, MCQ practics, etc.</p>
-          </div>
-          <div class="col-lg-12 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-house-fill"></i></div>
-            <h4 class="title"><a  href="https://salutemcare.herokuapp.com/" target="_blank">Salutem Care - Healthcare Solution</a></h4>
-            <p class="description" align="justify">"Salutem Care" is a Smart Healthcare Solution that provides secure, efficient, and easy Solutions for Healthcare. The main goal is to reduce time and wasting money and improve quality, paperless transactions, maintain historical data of patients, medical reports, the conversation between doctors and patients, etc. The advantage of Salutem care is to predict a patient's health based on historical data, medicine, medical reports, etc. This app will reduce a lot of time for online appointments instead of going to hospital, appointment, and setting into the row.</p>
           </div>
         </div>
       </div>
