--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+  
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +45,6 @@
         <div class="social-links mt-3 text-center">
           <a href="https://in.linkedin.com/in/ravikumar-makwana" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.instagram.com/ravikumarmakwana" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.facebook.com/ravikumar.makwana.1690" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="tel:6354508988" class="twitter"><i class="bi bi-phone"></i></a>
           <a href="mailto:ravikumar.makwana.18@gmail.com" class="google-plus"><i class="bi bi-envelope"></i></a>
         </div>
@@ -77,7 +77,6 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm Computer Engineer. A quick learner and self-motivated individual, having more than 1.4 years of professional experience as a Full Stack Web Developer. Skilled in C#, Dot.NET Core Web API, and Angular technologies.</p>
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
@@ -87,16 +86,24 @@
             <h3>Computer Engineer</h3>
             <div class="row">
               <div class="col-lg-12">
-                <ul class="py-4">
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> April 18, 2000</li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong><a href="tel:6354508988"> 63545 08988</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong><a href="mailto:ravikumar.makwana.18@gmail.com"> ravikumar.makwana.18@gmail.com </a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> Above Balaji cold drinks, Front of khodiyar hotel, Near hudco police station. Khothriya main road</li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> Rajkot</li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>State:</strong> Gujarat</li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> India</li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Pin Code:</strong> 360 002</li>
-                </ul>
+                <p style="text-align: justify;">A quick learner and self-motivated individual, having more than 2 years of professional experience as a Full Stack Web Developer. Skilled in C#, Dot.NET Core Web API, MVC, MySQL, MsSQL, and Angular technologies.</p>
+                <p style="text-align: justify;">I am most comfortable with C# programming, but I am also flexible to work with any programming language and learn new programming languages too.</p>
+                <p style="text-align: justify;">Awarded Best Programmer in the class of 2018, 2019, 2020, and 2021.</p>
+                <p style="text-align: justify;">Trained and mentored 6 new interns on the project to scale up their problem-solving skills.</p>
+                <ul>
+                  <li>
+                    <b>LinkedIn: <a href="https://www.linkedin.com/in/ravikumar-makwana" target="_blank">ravikumar-makwana</a></b>
+                  </li>
+                  <li>
+                    <b>GitHub: <a href="https://github.com/ravikumarmakwana" target="_blank">ravikumarmakwana</a></b>
+                  </li>
+                  <li>
+                    <b>Leetcode: <a href="https://leetcode.com/RavikumarMakwana" target="_blank">RavikumarMakwana</a></b>
+                  </li>
+                  <li>
+                    <b>HackerRank: <a href="https://www.hackerrank.com/Ravi_makwana" target="_blank">Ravi_makwana</a></b>
+                  </li>
+                </ul>  
               </div>
             </div>
         </div>
@@ -148,16 +155,12 @@
               <p>
                 <ul>
                   <li>Runners up in Code Storm Competition in March 2019 Won Second Prize.</li>
-                  <br/>
                   <li>Won Second Prize in BATTEL OF BRAINS in October 2019.</li>  
-                  <br/>
                   <li>Won Second Prize in C-NISTER EVENT in October 2018.</li>
-                  <br/>
                   <li>Won First Proze in Realay Coding in February 2020.</li>
                 </ul>
               </p>
             </div>
-            <br/><br/>
             <div class="resume-item">
               <h4>Other Activities</h4>
               <p>
@@ -166,7 +169,6 @@
                 </ul>
               </p>
             </div>
-            <br><br>
             <div class="resume-item">
               <h4>Strengths</h4>
               <p>
@@ -197,20 +199,44 @@
                 </ul>
               </p>
             </div>
+            <div class="resume-item">
+              <h4>TCS Campus Ambassador</h4>
+              <h5>Jun 2020 - Sep 2020</h5>
+              <p>
+                <ul>
+                  <li style="text-align: justify;">Motivated and guided my classmates on how to participate in CodeVita coding competition, what are its benefits, and how to prepare for the competition to get a job letter from TCS.</li>
+                </ul>
+              </p>
+            </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5>Jun 2023 - Present</h5>
+              <p><em>Thinkbridge Software Pvt Ltd</em></p>
+              <p>
+                <ul>
+                  <li style="text-align: justify;">Designed and implemented SSO Authentication and Authorization mechanism using Azure Active Directory from scratch.</li>
+                  <li style="text-align: justify;">Analyzed and created POC for third-party integrations like SeekOut.</li>
+                  <li style="text-align: justify;">Designed serverless Azure Logic Apps and Azure Functions to automate email parsing and recruitment process.</li>
+                </ul>
+              </p>
+            </div>
+            <div class="resume-item">
               <h4>Junior Software Engineer</h4>
-              <h5>Aug 2021 - Present</h5>
+              <h5>Aug 2021 - Jun 2023</h5>
               <p><em>Tark Technologies LLP, Rajkot</em></p>
               <p>
                 <ul>
-                  <li style="text-align: justify;">Wrote front-end and back-end APIs for building and managing functionality in medical-based projects. Additionally wrote validations and automated unit testing. ASP.NET Core Web API, Angular, MS SQL.</li>
-                  <li style="text-align: justify;">Designed and implemented database migration from SQL to MySQL using skeema.io and flywaydb.</li>  
-                  <li style="text-align: justify;">Performed R&D on Angular, .NET core, and other libraries versions and upgraded to the latest version on service-based projects.</li>
-                  <li style="text-align: justify;">Wrote and deployed Lambda and State functions on AWS for client’s requirements. DynamoDB, S3.</li>
-                  <li style="text-align: justify;">I also designed and implemented a bank-related project from scratch. Onion Architecture</li>
+                  <li style="text-align: justify;">Implemented front-end components and back-end APIs using Angular and ASP.Net Core for building and managing functionality in medical-based projects.</li>
+                  <li style="text-align: justify;">Designed and implemented database migration from MSSQL to MySQL using skeema.io and flywaydb.</li>
+                  <li style="text-align: justify;">Analyzed the application response time using miniprofiler and improved response time by 40%.</li>
+                  <li style="text-align: justify;">Implemented distributed banking system APIs using Onion Architecture.</li>
+                  <li style="text-align: justify;">Analyzed and Improved the performance of database queries, stored procedures, and functions for large datasets.</li>
+                  <li style="text-align: justify;">Upgraded Angular and .NET Core libraries to the latest version on service-based projects.</li>
+                  <li style="text-align: justify;">Wrote validation and automated unit test cases for entity and business logic.</li>
+                  <li style="text-align: justify;">Redesigned Distributed Caching mechanism using Castle Core.</li>
                 </ul>
               </p>
             </div>
@@ -222,17 +248,6 @@
                 <ul>
                   <li style="text-align: justify;">I learned and practiced new technologies like C#, ADO.NET, MySQL, SQL, Entity Framework, Authentication and Authorization, ASP.NET Core Web API, and Unit testing.</li>
                   <li style="text-align: justify;">Designed and explored different architectures like Layered architecture and Onion architecture repository patterns.</li>  
-                  <li style="text-align: justify;">Designed and Implemented an Infrastructure Management system from scratch using the above technologies.</li>
-                  <li style="text-align: justify;">Implemented Automated Unit testing, logging, and Validation in ASP.NET Core Web API.</li>
-                </ul>
-              </p>
-            </div>
-            <div class="resume-item">
-              <h4>TCS Campus Ambassador</h4>
-              <h5>Jun 2020 - Sep 2020</h5>
-              <p>
-                <ul>
-                  <li style="text-align: justify;">Motivated and guided my classmates on how to participate in CodeVita coding competition, what are its benefits, and how to prepare for the competition to get a job letter from TCS.</li>
                 </ul>
               </p>
             </div>
@@ -242,16 +257,14 @@
               <p>
                 <ul>
                   <li>C# </li>
-                  <li>OOP and POP</li>
                   <li>ASP.Net Core MVC, ASP.Net Core Web API</li>
                   <li>Entity Framework Core, ADO.NET, Dapper</li>
                   <li>X-Unit, N-Unit and MS Unit testing</li>
-                  <li>LINQ</li>
                   <li>HTML, CSS</li> 
                   <li>JavaScript, TypeScript, Angular</li>
                   <li>SQL, MySQL</li>
-                  <li>Lambda Function, State Function</li>
                   <li>Layered, and Onion Architecture</li>
+                  <li>Microsoft Azure</li>
                 </ul>
               </p>
             </div>
@@ -331,29 +344,22 @@
 
           <div class="col-lg-12 d-flex align-items-stretch">
             <div class="info">
-              <i class="bi bi-envelope-fill"></i>
-              <h4>Email:</h4>
-              <a href="mailto:ravikumar.makwana.18@gmail.com">
-                <p>ravikumar.makwana.18@gmail.com</p>
-              </a>
-              <i class="bi bi-phone-fill"></i>
-              <h4>Phone Number:</h4>
-              <a href="tel:6354508988">
-                <p>63545 08988</p>
-              </a>
-              <i class="bi bi-github"></i>
-              <h4>GitHub:</h4>
-              <a href="https://github.com/ravikumarmakwana" target="_blank">
-                <p>https://github.com/ravikumarmakwana</p>
-              </a>
-              <i class="fab fa-hackerrank"></i>
-              <h4>Hackerrank:</h4>
-              <a href="https://hackerrank.com/Ravi_makwana" target="_blank">
-                <p>https://hackerrank.com/Ravi_makwana</p>
-              </a>
-              <i class="bi bi-map-fill"></i>
-              <h4>Address:</h4>
-              <p>Above Balaji cold drinks, Front of khodiyar hotel, Near hudco police station. Khothriya main road, Rajkot-360002, Gujarat.</p>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <i class="bi bi-envelope-fill"></i>
+                  <h4>Email:</h4>
+                  <a href="mailto:ravikumar.makwana.18@gmail.com">
+                    <p>ravikumar.makwana.18@gmail.com</p>
+                  </a>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <i class="bi bi-phone-fill"></i>
+                  <h4>Phone Number:</h4>
+                  <a href="tel:6354508988">
+                    <p>63545 08988</p>
+                  </a>
+                </div>
+              </div>              
             </div>
           </div>
         </div>
