--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Work & Experience</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-code"></i> <span>Projects</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1cxFQkXsa-Jh-QwqP7vE_wAMxoXGGpQpN/view?usp=sharing" class="nav-link" target="_blank"><i class="bx bx-book"></i> <span>Resume</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -86,22 +87,28 @@
             <h3>Computer Engineer</h3>
             <div class="row">
               <div class="col-lg-12">
-                <p style="text-align: justify;">A quick learner and self-motivated individual, having more than 2 years of professional experience as a Full Stack Web Developer. Skilled in C#, Dot.NET Core Web API, MVC, MySQL, MsSQL, and Angular technologies.</p>
-                <p style="text-align: justify;">I am most comfortable with C# programming, but I am also flexible to work with any programming language and learn new programming languages too.</p>
-                <p style="text-align: justify;">Awarded Best Programmer in the class of 2018, 2019, 2020, and 2021.</p>
-                <p style="text-align: justify;">Trained and mentored 6 new interns on the project to scale up their problem-solving skills.</p>
+                <p style="text-align: justify;">I'm a quick learner and self-motivated individual, with over 2.8 years of professional experience as a Software Engineer. Specializing in C# programming and structured, test-driven software development, I thrive on solving complex problems and delivering high-quality solutions to meet the needs of our customers.</p>
+                <p style="text-align: justify;">I'm most comfortable with C#, .NET Core, and relational databases like MySQL and MSSQL, but I'm also flexible and eager to work with new technologies and programming languages.</p>
+                <p style="text-align: justify;">My highest qualification is a Bachelor of Computer Engineering, completed in 2021 from V.V.P. Engineering College.</p>
+                <p style="text-align: justify;">I thrive in collaborative environments and enjoy working closely with fellow engineers and stakeholders to deliver solutions that exceed expectations. Whether it's optimizing performance, architecting robust systems, or tackling challenging problems, I'm always up for the task.</p>
+                <br>
+                <br>
                 <ul>
                   <li>
-                    <b>LinkedIn: <a href="https://www.linkedin.com/in/ravikumar-makwana" target="_blank">ravikumar-makwana</a></b>
+                    <div class="col-lg-6">
+                      <b>LinkedIn: <a href="https://www.linkedin.com/in/ravikumar-makwana" target="_blank">ravikumar-makwana</a></b>
+                    </div>
+                    <div class="col-lg-6">
+                      <b>GitHub: <a href="https://github.com/ravikumarmakwana" target="_blank">ravikumarmakwana</a></b>
+                    </div>
                   </li>
                   <li>
-                    <b>GitHub: <a href="https://github.com/ravikumarmakwana" target="_blank">ravikumarmakwana</a></b>
-                  </li>
-                  <li>
-                    <b>Leetcode: <a href="https://leetcode.com/RavikumarMakwana" target="_blank">RavikumarMakwana</a></b>
-                  </li>
-                  <li>
-                    <b>HackerRank: <a href="https://www.hackerrank.com/Ravi_makwana" target="_blank">Ravi_makwana</a></b>
+                    <div class="col-lg-6">
+                      <b>Leetcode: <a href="https://leetcode.com/RavikumarMakwana" target="_blank">RavikumarMakwana</a></b>
+                    </div>
+                    <div class="col-lg-6">
+                      <b>HackerRank: <a href="https://www.hackerrank.com/Ravi_makwana" target="_blank">Ravi_makwana</a></b>
+                    </div>
                   </li>
                 </ul>  
               </div>
@@ -217,9 +224,10 @@
               <p><em>Thinkbridge Software Pvt Ltd</em></p>
               <p>
                 <ul>
-                  <li style="text-align: justify;">Designed and implemented SSO Authentication and Authorization mechanism using Azure Active Directory from scratch.</li>
-                  <li style="text-align: justify;">Analyzed and created POC for third-party integrations like SeekOut.</li>
-                  <li style="text-align: justify;">Designed serverless Azure Logic Apps and Azure Functions to automate email parsing and recruitment process.</li>
+                  <li style="text-align: justify;">Automated candidate application email parsing, resulting in a 90% reduction in manual efforts for the recruiter team.</li>
+                  <li style="text-align: justify;">Designed and implemented a streamlined Single Sign‑On (SSO) Authentication and Authorization mechanism in the Compass to enhance user experience and security.</li>
+                  <li style="text-align: justify;">Optimized third‑party integration of Modern Hire, Daxtra Search, and Lgorithm in the Compass application, to enhance overall functionality and system performance.</li>
+                  <li style="text-align: justify;">Enhanced application performance by 45% through comprehensive code optimization and database operation improvements.</li>
                 </ul>
               </p>
             </div>
@@ -233,9 +241,8 @@
                   <li style="text-align: justify;">Designed and implemented database migration from MSSQL to MySQL using skeema.io and flywaydb.</li>
                   <li style="text-align: justify;">Analyzed the application response time using miniprofiler and improved response time by 40%.</li>
                   <li style="text-align: justify;">Implemented distributed banking system APIs using Onion Architecture.</li>
-                  <li style="text-align: justify;">Analyzed and Improved the performance of database queries, stored procedures, and functions for large datasets.</li>
-                  <li style="text-align: justify;">Upgraded Angular and .NET Core libraries to the latest version on service-based projects.</li>
-                  <li style="text-align: justify;">Wrote validation and automated unit test cases for entity and business logic.</li>
+                  <li style="text-align: justify;">AAchieved a 30% improvement in query response time by analyzing and optimizing database queries and functions for large datasets.</li>
+                  <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and migrated .NET libraries from version 4.7 to 6 in service‑based projects.</li>
                   <li style="text-align: justify;">Redesigned Distributed Caching mechanism using Castle Core.</li>
                 </ul>
               </p>
