Modify experience section

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             </div>
             <ul>
               <li style="text-align: justify;">Implemented front-end components and back-end APIs using Angular and ASP.Net Core for building and managing functionality in medical-based projects.</li>
-              <li style="text-align: justify;">Designed and implemented database migration from MSSQL to MySQL using skeema.io and flywaydb.</li>
-              <li style="text-align: justify;">Analyzed the application response time using miniprofiler and improved response time by 40%.</li>
+              <li style="text-align: justify;">Successfully spearheaded database migration from MSSQL to MySQL using skeema.io and flywaydb, resulting in substantial improvements to scalability, performance, and cost efficiency of the database infrastructure.</li>
+              <li style="text-align: justify;">Analyzed the application response time using a MiniProfiler and improved response time by 40%.</li>
               <li style="text-align: justify;">Implemented distributed banking system APIs using Onion Architecture.</li>
               <li style="text-align: justify;">Achieved a 30% improvement in query response time by analyzing and optimizing database queries and functions for large datasets.</li>
               <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and migrated .NET libraries from version 4.7 to 6 in service‑based projects.</li>
