--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/Ravikumar Makwana.pdf')"
           >
-            Download CV
+            Download Resume
           </button>
         </div>
         <div id="socials-container">
@@ -149,7 +149,7 @@
               <li style="text-align: justify;">Implemented distributed banking system APIs using Onion Architecture.</li>
               <li style="text-align: justify;">Achieved a 30% improvement in query response time by analyzing and optimizing database queries and functions for large datasets.</li>
               <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and migrated .NET libraries from version 4.7 to 6 in service‑based projects.</li>
-              <li style="text-align: justify;">Redesigned Distributed Caching mechanism using Castle Core.</li>
+              <li style="text-align: justify;">Redesigned Distributed Caching mechanism using Castle.Core.</li>
             </ul>
           </div>
         </div>
