--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/Ravikumar Makwana.pdf')"
           >
-            Download Resume
+            Download CV
           </button>
         </div>
         <div id="socials-container">
