--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <ul>
               <li style="text-align: justify;">Automated candidate application email parsing, resulting in a 90% reduction in manual efforts for the recruiter team.</li>
-              <li style="text-align: justify;">Designed and implemented a streamlined Single Sign‑On (SSO) Authentication and Authorization mechanism in the Compass to enhance user experience and security.</li>
+              <li style="text-align: justify;">Led the design and development of a streamlined Single Sign-On (SSO) Authentication and Authorization mechanism in the Compass to enhance user experience and security.</li>
               <li style="text-align: justify;">Optimized third‑party integration of Modern Hire, Daxtra Search, and Lgorithm in the Compass application, to enhance overall functionality and system performance.</li>
               <li style="text-align: justify;">Enhanced application performance by 45% through comprehensive code optimization and database operation improvements.</li>
             </ul>
@@ -144,12 +144,12 @@
             </div>
             <ul>
               <li style="text-align: justify;">Implemented front-end components and back-end APIs using Angular and ASP.Net Core for building and managing functionality in medical-based projects.</li>
-              <li style="text-align: justify;">Successfully spearheaded database migration from MSSQL to MySQL using skeema.io and flywaydb, resulting in substantial improvements to scalability, performance, and cost efficiency of the database infrastructure.</li>
+              <li style="text-align: justify;">Led successful migration of database infrastructure from MSSQL to MySQL utilizing skeema.io and flywaydb, achieving significant enhancements in scalability, performance, and cost efficiency.</li>
               <li style="text-align: justify;">Analyzed the application response time using a MiniProfiler and improved response time by 40%.</li>
               <li style="text-align: justify;">Implemented distributed banking system APIs using Onion Architecture.</li>
               <li style="text-align: justify;">Achieved a 30% improvement in query response time by analyzing and optimizing database queries and functions for large datasets.</li>
               <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and migrated .NET libraries from version 4.7 to 6 in service‑based projects.</li>
-              <li style="text-align: justify;">Redesigned Distributed Caching mechanism using Castle.Core.</li>
+              <li style="text-align: justify;">Supervised and mentored a team of 6 interns, providing guidance and support in their professional development and project tasks.</li>
             </ul>
           </div>
         </div>
@@ -196,10 +196,10 @@
             <div class="article-container">
               <ul>
                 <li style="text-align: justify;">
-                  Designed and implemented a robust ASP.NET Core 8 Web API for QuickBank, incorporating Layered Architecture for Scalability and Maintainability.
+                  Developed a robust ASP.NET Core 8 Web API for QuickBank, incorporating Layered Architecture for Scalability and Maintainability.
                 </li>
                 <li style="text-align: justify;">
-                  Designed and implemented Azure Functions to automate essential banking operations, including quarterly interest calculations, account status updates, and fixed deposit management.
+                  Created Azure Functions to automate essential banking operations, including quarterly interest calculations, account status updates, and fixed deposit management.
                 </li>
                 <li style="text-align: justify;">
                   Implemented a comprehensive set of CRUD functionalities to simulate essential banking operations, including customer management, account operations, transaction handling, and fixed deposit management.
