--- a/index.html
+++ b/index.html
@@ -143,11 +143,10 @@
               <br>
             </div>
             <ul>
-              <li style="text-align: justify;">Implemented front-end components and back-end APIs using Angular and ASP.Net Core for building and managing functionality in medical-based projects.</li>
+              <li style="text-align: justify;">Developed front-end components with Angular and integrated back-end APIs using ASP.NET Core to enhance key functionalities in medical-based projects.</li>
               <li style="text-align: justify;">Led successful migration of database infrastructure from MSSQL to MySQL utilizing skeema.io and flywaydb, achieving significant enhancements in scalability, performance, and cost efficiency.</li>
-              <li style="text-align: justify;">Analyzed the application response time using a MiniProfiler and improved response time by 40%.</li>
-              <li style="text-align: justify;">Implemented distributed banking system APIs using Onion Architecture.</li>
-              <li style="text-align: justify;">Achieved a 30% improvement in query response time by analyzing and optimizing database queries and functions for large datasets.</li>
+              <li style="text-align: justify;">Utilized MiniProfiler to analyze application response time and implemented targeted optimizations, resulting in a significant 40% improvement in overall response time.</li>
+              <li style="text-align: justify;">Enhanced query performance by 30% through detailed analysis and optimization of database queries and functions, particularly for large datasets.</li>
               <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and migrated .NET libraries from version 4.7 to 6 in service‑based projects.</li>
               <li style="text-align: justify;">Supervised and mentored a team of 6 interns, providing guidance and support in their professional development and project tasks.</li>
             </ul>
@@ -196,7 +195,7 @@
             <div class="article-container">
               <ul>
                 <li style="text-align: justify;">
-                  Developed a robust ASP.NET Core 8 Web API for QuickBank, incorporating Layered Architecture for Scalability and Maintainability.
+                  Engineered a robust ASP.NET Core Web API, utilizing Layered Architecture to enhance scalability and maintainability.
                 </li>
                 <li style="text-align: justify;">
                   Created Azure Functions to automate essential banking operations, including quarterly interest calculations, account status updates, and fixed deposit management.
