--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
               <br>
             </div>
             <ul>
-              <li style="text-align: justify;">Automated candidate application email parsing, resulting in a 90% reduction in manual efforts for the recruiter team.</li>
-              <li style="text-align: justify;">Led the design and development of a streamlined Single Sign-On (SSO) Authentication and Authorization mechanism in the Compass to enhance user experience and security.</li>
-              <li style="text-align: justify;">Optimized third‑party integration of Modern Hire, Daxtra Search, and Lgorithm in the Compass application, to enhance overall functionality and system performance.</li>
-              <li style="text-align: justify;">Enhanced application performance by 45% through comprehensive code optimization and database operation improvements.</li>
+              <li style="text-align: justify;">Achieved a 90% reduction in manual efforts with automated candidate application email parsing.</li>
+              <li style="text-align: justify;">Led the design and development of a streamlined Single Sign-On (SSO) Authentication and Authorization mechanism in Compass to enhance user experience and security.</li>
+              <li style="text-align: justify;">Optimized overall functionality and system performance by integrating and optimizing Modern Hire, Daxtra Search, Survale, and Lgorithm within the Compass application.</li>
+              <li style="text-align: justify;">Boosted application performance by 45% by conducting comprehensive code optimization and optimizing database operations.</li>
             </ul>
           </div>
           <div class="details-container">
@@ -143,12 +143,12 @@
               <br>
             </div>
             <ul>
-              <li style="text-align: justify;">Developed front-end components with Angular and integrated back-end APIs using ASP.NET Core to enhance key functionalities in medical-based projects.</li>
-              <li style="text-align: justify;">Led successful migration of database infrastructure from MSSQL to MySQL utilizing skeema.io and flywaydb, achieving significant enhancements in scalability, performance, and cost efficiency.</li>
-              <li style="text-align: justify;">Utilized MiniProfiler to analyze application response time and implemented targeted optimizations, resulting in a significant 40% improvement in overall response time.</li>
-              <li style="text-align: justify;">Enhanced query performance by 30% through detailed analysis and optimization of database queries and functions, particularly for large datasets.</li>
-              <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and migrated .NET libraries from version 4.7 to 6 in service‑based projects.</li>
-              <li style="text-align: justify;">Supervised and mentored a team of 6 interns, providing guidance and support in their professional development and project tasks.</li>
+              <li style="text-align: justify;">Developed front-end components and back-end APIs using Angular and ASP.NET Core for Real-Time Medical Systems.</li>
+              <li style="text-align: justify;">Migrated database infrastructure from MSSQL to MySQL using Skeema.io and Flywaydb, improving scalability, performance, and cost efficiency.</li>
+              <li style="text-align: justify;">Improved application response time by 40% through targeted optimizations using MiniProfiler.</li>
+              <li style="text-align: justify;">Achieved a 30% faster query response time by optimizing the database queries for large datasets.</li>
+              <li style="text-align: justify;">Upgraded Angular from version 8 to 15 and .NET libraries from version 4.7 to 6 in service-based projects.</li>
+              <li style="text-align: justify;">Supervised and mentored a team of 6 interns, facilitating their professional growth and project contributions.</li>
             </ul>
           </div>
         </div>
@@ -193,6 +193,9 @@
           <div class="details-container color-container">
             <h2 class="experience-sub-title project-title">QuickBank API</h2>
             <div class="article-container">
+              <p>
+                The QuickBank API is designed to facilitate comprehensive banking operations using ASP.NET Core 8 and Azure Functions.
+              </p>
               <ul>
                 <li style="text-align: justify;">
                   Engineered a robust ASP.NET Core Web API, utilizing Layered Architecture to enhance scalability and maintainability.
