Add new project

--- a/index.html
+++ b/index.html
@@ -83,12 +83,6 @@
             class="icon"
           />
           </a>
-          <a href="tel:6354508988" target="_blank">
-            <img
-            src="./assets/phone.png"
-            class="icon"
-          />
-          </a>
         </div>
       </div>
     </section>
@@ -99,7 +93,7 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="text-container">
-              <p style="text-align: justify;">I'm a quick learner and self-motivated individual, with over 2.9 years of professional experience as a Software Engineer. Specializing in C# programming and structured, test-driven software development, I thrive on solving complex problems and delivering high-quality solutions to meet the needs of our customers.</p>
+              <p style="text-align: justify;">I'm a quick learner and self-motivated individual, with over 3 years of professional experience as a Software Engineer. Specializing in C# programming and structured, test-driven software development, I thrive on solving complex problems and delivering high-quality solutions to meet the needs of our customers.</p>
               <br>
               <p style="text-align: justify;">I'm most comfortable with C#, .NET Core, and relational databases like MySQL and MSSQL, but I'm also flexible and eager to work with new technologies and programming languages.</p>
               <br>
@@ -154,73 +148,72 @@
         </div>
       </div>
     </section>
+    
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
-        <div class="about-containers" style="display: flex;">
+        <div class="about-containers">
           <div class="details-container color-container">
-            <h2 class="experience-sub-title project-title">Collaborative Whiteboard App</h2>
-            <div class="article-container">
-              <p>
-                Collaborative whiteboard app allowing real-time drawing using HTML/CSS/JS, Bootstrap for styling, and Socket.IO for live user communication.
+            <div style="text-align: left">
+              <h2>GroupBalancer</h2>
+            </div>
+            <ul>
+              <li style="text-align: justify;">Developed a C# GroupBalancer utility that dynamically assigns individuals into groups based on predefined target percentages.</li>
+              <li style="text-align: justify;">Utilizes a PriorityQueue to track and allocate people in real-time, maintaining target group distributions.</li>
+              <li style="text-align: justify;">The tool supports flexible group configurations and ensures optimized resource allocation across various real-world applications like surveys, event planning, and workload distribution.</li>
+              <p style="text-align: justify;">
+                <a
+                  target="_blank"
+                  href="https://github.com/ravikumarmakwana/GroupBalancer">
+                  Check out the Repository
+              </a>
               </p>
-              <ul>
-                <li style="text-align: justify;">
-                  Real-Time Collaboration: Multiple users can draw together on the same whiteboard simultaneously.
-                </li>
-                <li style="text-align: justify;">
-                  Customizable Drawing Tools: Users can choose different colors and brush sizes for their drawings.
-                </li>
-                <li style="text-align: justify;">
-                  Eraser Mode: Includes an eraser mode for removing specific parts of the drawing.
-                </li>
-                <li style="text-align: justify;">
-                  Room-based Interaction: Users can create new whiteboards or join existing ones using unique room IDs.
-                </li>
-              </ul>
-            </div>
-            <br>
-            <div class="btn-container">
-              <a
-                class="btn btn-color-2 project-btn"
-                target="_blank"
-                href="https://github.com/ravikumarmakwana/Collaborative-Draw">
-                Github
-            </a>
-            </div>
+            </ul>
           </div>
+          <br>
           <div class="details-container color-container">
-            <h2 class="experience-sub-title project-title">QuickBank API</h2>
-            <div class="article-container">
-              <p>
-                The QuickBank API is designed to facilitate comprehensive banking operations using ASP.NET Core 8 and Azure Functions.
+            <div style="text-align: left">
+              <h2>Collaborative Whiteboard App</h2>
+            </div>
+            <ul>
+              <li style="text-align: justify;">Collaborative whiteboard app allowing real-time drawing using HTML/CSS/JS, Bootstrap for styling, and Socket.IO for live user communication.</li>
+              <li style="text-align: justify;">Real-Time Collaboration: Multiple users can draw together on the same whiteboard simultaneously.</li>
+              <li style="text-align: justify;">Customizable Drawing Tools: Users can choose different colors and brush sizes for their drawings.</li>
+              <li style="text-align: justify;">Eraser Mode: Includes an eraser mode for removing specific parts of the drawing.</li>
+              <li style="text-align: justify;">Room-based Interaction: Users can create new whiteboards or join existing ones using unique room IDs.</li>
+              <p style="text-align: justify;">
+                <a
+                  target="_blank"
+                  href="https://github.com/ravikumarmakwana/Collaborative-Draw">
+                  Check out the Repository
+              </a>
               </p>
-              <ul>
-                <li style="text-align: justify;">
-                  Engineered a robust ASP.NET Core Web API, utilizing Layered Architecture to enhance scalability and maintainability.
-                </li>
-                <li style="text-align: justify;">
-                  Created Azure Functions to automate essential banking operations, including quarterly interest calculations, account status updates, and fixed deposit management.
-                </li>
-                <li style="text-align: justify;">
-                  Implemented a comprehensive set of CRUD functionalities to simulate essential banking operations, including customer management, account operations, transaction handling, and fixed deposit management.
-                </li>
-              </ul>
+            </ul>
+          </div>
+          <br>
+          <div class="details-container color-container">
+            <div style="text-align: left">
+              <h2>QuickBank API</h2>
             </div>
-            <br>
-            <div class="btn-container">
-              <a
-                class="btn btn-color-2 project-btn"
-                target="_blank"
-                href="https://github.com/ravikumarmakwana/QuickBank">
-                Github
-            </a>
-            </div>
+            <ul>
+              <li style="text-align: justify;">The QuickBank API is designed to facilitate comprehensive banking operations using ASP.NET Core 8 and Azure Functions.</li>
+              <li style="text-align: justify;">Engineered a robust ASP.NET Core Web API, utilizing Layered Architecture to enhance scalability and maintainability.</li>
+              <li style="text-align: justify;">Created Azure Functions to automate essential banking operations, including quarterly interest calculations, account status updates, and fixed deposit management.</li>
+              <li style="text-align: justify;">Implemented a comprehensive set of CRUD functionalities to simulate essential banking operations, including customer management, account operations, transaction handling, and fixed deposit management.</li>
+              <p style="text-align: justify;">
+                <a
+                  target="_blank"
+                  href="https://github.com/ravikumarmakwana/QuickBank">
+                  Check out the Repository
+              </a>
+              </p>
+            </ul>
           </div>
         </div>
       </div>
     </section>
+
     <section id="education">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Education</h1>
